--- a/amore-web/src/index.css
+++ b/amore-web/src/index.css
@@ -137,8 +137,7 @@ body {
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.chat-content-messages,
-.chat-sidebar,
+.chat-content-messages .chat-sidebar,
 .chat-card-user-wrapper,
 .visit-grid-container-right-column,
 .visit-grid-container-left-column,
@@ -304,6 +303,12 @@ header a,
   overflow: hidden;
 }
 
+.push-notification-image img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 .push-notification h4 {
   font-weight: 600;
   color: var(--darkText);
@@ -421,7 +426,6 @@ header a {
 }
 
 .premium-content p {
-  max-width: 230px;
   font-weight: 300;
   margin-top: .3rem;
   font-size: clamp(.8rem, 1.3vw, .88rem)
